--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -116,6 +116,7 @@
     color:rgb(144, 96, 184);
     margin-bottom:13px;
     transition: all .2s ease-in-out;
+    text-overflow:ellipsis;
 }
 
 #settings-game-path-field:hover {
